some workaround for codegen
